<resources>
    <string name="app_name">Daily!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_daily">Welcome to Daily!</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="signIn_prompt">Don\'t have an account?\nSign up!</string>
    <string name="logIn_prompt">Log in to an existing account. </string>
    <string name="logIn_failed">Log in failed.</string>
    <string name="signUp_failed">Sign up failed.</string>
    <string name="username_cannot_be_blank">Username cannot be blank!</string>
    <string name="password_cannot_be_blank">Password cannot be blank!</string>
    <string name="missing_text">MISSING TEXT!</string>
    <string name="error">Error!</string>
    <string name="loading">Loading…</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="site_name">Site name</string>
    <string name="logOut">Log out</string>
    <string name="darkMode">Dark mode</string>
    <string name="accept">Accept</string>
    <string name="no_text">No text!</string>
    <string name="delete">Delete</string>
    <string name="news">News</string>
    <string name="passwords">Passwords</string>
    <string name="sensors">Sensors</string>
    <string name="settings">Settings</string>
    <string name="returnText">Return</string>
    <string name="darkModeSP">Dark Mode</string>
    <string name="text_error">Not yet measured!</string>
    <string name="text_main_temperature_title">Temperature</string>
    <string name="text_main_acc_title">Acceleration</string>
    <string name="text_main_light_title">Light</string>
    <string name="text_main_hum_title">Humidity</string>
    <string name="text_main_pre_title">Pressure</string>
</resources>